Bug fixes : dark mode + mat classes + theme colors

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
 .content {
   padding: 16px;
   min-height: 100vh;
+  z-index: 99;
 }
